[Mahammad Rabbani]Modifyied: fixed the swagger code
